# lipo--sapr-lab2

./: CMakeLists.txt
